// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertModal renders error variant correctly 1`] = `
<div
  class="modal-dialog alert-modal alert-modal--error"
>
  <div
    tabindex="0"
  />
   
  <div
    tabindex="1"
  />
   
  <div
    data-lock=""
  >
    <div
      aria-describedby="test-body"
      aria-labelledby="test-header"
      class="modal-window modal-window--small"
      id="test"
      role="dialog"
    >
      <div
        class="modal-header modal-header--transparent"
        id="test-header"
      >
        <svg
          aria-hidden="true"
          class="base-icon svg-inline--fa fa-exclamation-circle fa-w-16 alert-modal__icon"
          data-icon="exclamation-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
          />
        </svg>
         Heading goes here
      </div>
       
      <div
        class="modal-dialog__body"
        id="test-body"
      >
         Content goes here
      </div>
       
      <div
        class="modal-actions modal-actions--center"
      >
        <button
          class="modal-actions__action modal-actions__action--primary base-button base-button--primary base-button--medium base-button--regular base-button--inline"
          type="button"
        >
          <div
            class="base-button__inner"
          >
            Continue
          </div>
        </button>
         
        <button
          class="modal-actions__action modal-actions__action--secondary base-button base-button--secondary base-button--medium base-button--flat base-button--inline"
          type="button"
        >
          <div
            class="base-button__inner"
          >
            Cancel
          </div>
        </button>
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <button
      class="modal-close modal-close--light"
      title="Close"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="base-icon svg-inline--fa fa-times-circle fa-w-16"
        data-icon="times-circle"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class=""
          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 464c-118.7 0-216-96.1-216-216 0-118.7 96.1-216 216-216 118.7 0 216 96.1 216 216 0 118.7-96.1 216-216 216zm94.8-285.3L281.5 256l69.3 69.3c4.7 4.7 4.7 12.3 0 17l-8.5 8.5c-4.7 4.7-12.3 4.7-17 0L256 281.5l-69.3 69.3c-4.7 4.7-12.3 4.7-17 0l-8.5-8.5c-4.7-4.7-4.7-12.3 0-17l69.3-69.3-69.3-69.3c-4.7-4.7-4.7-12.3 0-17l8.5-8.5c4.7-4.7 12.3-4.7 17 0l69.3 69.3 69.3-69.3c4.7-4.7 12.3-4.7 17 0l8.5 8.5c4.6 4.7 4.6 12.3 0 17z"
          fill="currentColor"
        />
      </svg>
      <div
        aria-hidden="true"
        class="modal-close__visible-label"
      >
        Esc
      </div>
      <div
        class="modal-close__accessible-label"
      >
        Click or press escape to close
      </div>
    </button>
     
    <div
      class="modal-overlay modal-overlay--primary"
    />
  </div>
   
  <div
    tabindex="0"
  />
</div>
`;

exports[`AlertModal renders success variant correctly 1`] = `
<div
  class="modal-dialog alert-modal alert-modal--success"
>
  <div
    tabindex="0"
  />
   
  <div
    tabindex="1"
  />
   
  <div
    data-lock=""
  >
    <div
      aria-describedby="test-body"
      aria-labelledby="test-header"
      class="modal-window modal-window--small"
      id="test"
      role="dialog"
    >
      <div
        class="modal-header modal-header--transparent"
        id="test-header"
      >
        <svg
          aria-hidden="true"
          class="base-icon svg-inline--fa fa-check-circle fa-w-16 alert-modal__icon"
          data-icon="check-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            fill="currentColor"
          />
        </svg>
         Heading goes here
      </div>
       
      <div
        class="modal-dialog__body"
        id="test-body"
      >
         Content goes here
      </div>
       
      <div
        class="modal-actions modal-actions--center"
      >
        <button
          class="modal-actions__action modal-actions__action--primary base-button base-button--primary base-button--medium base-button--regular base-button--inline"
          type="button"
        >
          <div
            class="base-button__inner"
          >
            Continue
          </div>
        </button>
         
        <button
          class="modal-actions__action modal-actions__action--secondary base-button base-button--secondary base-button--medium base-button--flat base-button--inline"
          type="button"
        >
          <div
            class="base-button__inner"
          >
            Cancel
          </div>
        </button>
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <button
      class="modal-close modal-close--light"
      title="Close"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="base-icon svg-inline--fa fa-times-circle fa-w-16"
        data-icon="times-circle"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class=""
          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 464c-118.7 0-216-96.1-216-216 0-118.7 96.1-216 216-216 118.7 0 216 96.1 216 216 0 118.7-96.1 216-216 216zm94.8-285.3L281.5 256l69.3 69.3c4.7 4.7 4.7 12.3 0 17l-8.5 8.5c-4.7 4.7-12.3 4.7-17 0L256 281.5l-69.3 69.3c-4.7 4.7-12.3 4.7-17 0l-8.5-8.5c-4.7-4.7-4.7-12.3 0-17l69.3-69.3-69.3-69.3c-4.7-4.7-4.7-12.3 0-17l8.5-8.5c4.7-4.7 12.3-4.7 17 0l69.3 69.3 69.3-69.3c4.7-4.7 12.3-4.7 17 0l8.5 8.5c4.6 4.7 4.6 12.3 0 17z"
          fill="currentColor"
        />
      </svg>
      <div
        aria-hidden="true"
        class="modal-close__visible-label"
      >
        Esc
      </div>
      <div
        class="modal-close__accessible-label"
      >
        Click or press escape to close
      </div>
    </button>
     
    <div
      class="modal-overlay modal-overlay--primary"
    />
  </div>
   
  <div
    tabindex="0"
  />
</div>
`;

exports[`AlertModal renders warning variant correctly 1`] = `
<div
  class="modal-dialog alert-modal alert-modal--warning"
>
  <div
    tabindex="0"
  />
   
  <div
    tabindex="1"
  />
   
  <div
    data-lock=""
  >
    <div
      aria-describedby="test-body"
      aria-labelledby="test-header"
      class="modal-window modal-window--small"
      id="test"
      role="dialog"
    >
      <div
        class="modal-header modal-header--transparent"
        id="test-header"
      >
        <svg
          aria-hidden="true"
          class="base-icon svg-inline--fa fa-exclamation-triangle fa-w-18 alert-modal__icon"
          data-icon="exclamation-triangle"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
          />
        </svg>
         Heading goes here
      </div>
       
      <div
        class="modal-dialog__body"
        id="test-body"
      >
         Content goes here
      </div>
       
      <div
        class="modal-actions modal-actions--center"
      >
        <button
          class="modal-actions__action modal-actions__action--primary base-button base-button--primary base-button--medium base-button--regular base-button--inline"
          type="button"
        >
          <div
            class="base-button__inner"
          >
            Continue
          </div>
        </button>
         
        <button
          class="modal-actions__action modal-actions__action--secondary base-button base-button--secondary base-button--medium base-button--flat base-button--inline"
          type="button"
        >
          <div
            class="base-button__inner"
          >
            Cancel
          </div>
        </button>
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <button
      class="modal-close modal-close--light"
      title="Close"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="base-icon svg-inline--fa fa-times-circle fa-w-16"
        data-icon="times-circle"
        data-prefix="fal"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class=""
          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 464c-118.7 0-216-96.1-216-216 0-118.7 96.1-216 216-216 118.7 0 216 96.1 216 216 0 118.7-96.1 216-216 216zm94.8-285.3L281.5 256l69.3 69.3c4.7 4.7 4.7 12.3 0 17l-8.5 8.5c-4.7 4.7-12.3 4.7-17 0L256 281.5l-69.3 69.3c-4.7 4.7-12.3 4.7-17 0l-8.5-8.5c-4.7-4.7-4.7-12.3 0-17l69.3-69.3-69.3-69.3c-4.7-4.7-4.7-12.3 0-17l8.5-8.5c4.7-4.7 12.3-4.7 17 0l69.3 69.3 69.3-69.3c4.7-4.7 12.3-4.7 17 0l8.5 8.5c4.6 4.7 4.6 12.3 0 17z"
          fill="currentColor"
        />
      </svg>
      <div
        aria-hidden="true"
        class="modal-close__visible-label"
      >
        Esc
      </div>
      <div
        class="modal-close__accessible-label"
      >
        Click or press escape to close
      </div>
    </button>
     
    <div
      class="modal-overlay modal-overlay--primary"
    />
  </div>
   
  <div
    tabindex="0"
  />
</div>
`;
